--- a/layout-excercise/Excercises/gallery.css
+++ b/layout-excercise/Excercises/gallery.css
@@ -1,15 +1,28 @@
-.body{
-    margin:0;
-    padding:0;
-}
-
 .gallery{
     display: grid;
-    grid-template-rows: repeat(9, 100px);
-    grid-template-columns: repeat(1, 100px);
-    justify-content: center
+    gap: 10px;
 }
 
 .photo {
-    width: 200px;
+    object-fit: cover;
+    width: 100%;
+}
+
+
+@media screen and (min-width: 768px)  {
+    .gallery{
+    grid-template-columns: repeat(2, auto);
+}
+}
+
+@media screen and (min-width: 1024px) {
+    .gallery{
+    grid-template-columns: repeat(3, auto);
+    grid-area: 1 / 2;
+}
+
+.photo:nth-of-type(3){
+    grid-column: 2/4;
+    grid-row: 1/3;
+}
 }
